--- a/vercel.json
+++ b/vercel.json
@@ -20,6 +20,14 @@
             "dest": "/server.js"
         },
         {
+            "src": "/assets/(.*)",
+            "dest": "/dist/public/assets/$1"
+        },
+        {
+            "src": "/favicon.ico",
+            "dest": "/dist/public/favicon.ico"
+        },
+        {
             "src": "/(.*)",
             "dest": "/dist/public/index.html"
         }
